lang/tests/contract/common/ui/fail/05-forbidden-ident.stderr
error: identifiers starting with `__liquid`, `__Liquid` or `__LIQUID` are forbidden
  --> $DIR/05-forbidden-ident.rs:12:12
   |
12 |         fn __liquid_noop(&self) {}
   |            ^^^^^^^^^^^^^
